[package]
name = "e2r"
version = "0.1.0"
authors = ["YL <yuan6liu@gmail.com>"]

[lib]
name = "e2rcore"
path = "core/core.rs"

[dependencies]
gl = ">=0.6.3"
libc = ">=0.2.26"
glutin = ">=0.9.1"
rand = "0.3"
image = "*"
num = "0.1.40"

[[bin]]
name = "e2r_test_winglutin"
path = "core/example/window/test_winglutin.rs"

[[bin]]
name = "e2r_test_deferred"
path = "core/example/shading/test_deferred.rs"

[[bin]]
name = "e2r_test_ads"
path = "core/example/shading/test_ads.rs"

# [[bin]]
# name = "e2r_core_bin"
# path = "core/src/driver.rs"

# [[bin]]
# name = "e2r_sandbox"
# path = "sandbox/src/sandbox0.rs"

[[bin]]
name = "e2r_test_recurse"
path = "core/example/recursive/main.rs"