[package]
name = "e2r"
version = "0.5.0"
authors = ["YL <yuan6liu@gmail.com>"]
description = "experimental rendering engine in rust"
repository = "https://github.com/clearlycloudy/e2r/"
keywords = [ "rendering", "graphics", "engine", "3D", "physics" ]
license = "BSD-2-Clause"
documentation = "https://docs.rs/e2r/0.5.0/e2r/"
readme = "README.md"
exclude = [
"core/asset/images",
"core/asset/md5",
"core/asset/obj",
"core/asset/blend",
]

[lib]
name = "e2rcore"
path = "core/core.rs"

[dependencies]
gl = ">=0.6.3"
libc = ">=0.2.26"
glutin = ">=0.9.1"
rand = "0.3"
image = "0.17.0"
num = "0.1.40"
log = ">=0.4.1"
pretty_env_logger = ">=0.2.0"

[[bin]]
name = "e2r_example_kernel_impl000"
path = "core/example/example_kernel_impl000.rs"

# [[bin]]
# name = "e2r_test_deferred"
# path = "core/example/shading/test_deferred.rs"